# maypy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENCE  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: check.yml  docs.yml  generate-changelog.yml  release.yml
assets/stylesheets/: extra.css
changelog/: index.html
docs/: mkdocs.yml
docs/pages/: exceptions.md  functional.md  index.md  installation.md  maybe.md  predicates.md  usage.md
docs/pages/assets/stylesheets/: extra.css
exceptions/: index.html
functional/: index.html
installation/: index.html
maybe/: __init__.py  _exceptions.py  _functional.py  _maybe.py  index.html
maypy/: __init__.py  _functional.py  _maybe.py  predicates.py
predicates/: index.html
search/: search_index.json
tests/: test_functional.py  test_maybe.py  test_package.py  test_predicate.py
usage/: index.html
